--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   },
   "scripts": {
     "build": "rm -rf dist && tsc -p .",
-    "test": "jest --config ./jest.config.js"
+    "test": "jest --config ./jest.config.js --coverage"
   }
 }
